--- a/index.html
+++ b/index.html
@@ -426,43 +426,43 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Work</h2>
+					<h2>Game Projects</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="https://sheepcode.itch.io/flappy-clone" class="work" style="background-image: url(images/Captura\ de\ Tela\ \(176\).png);border-radius: 10%;">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>Flappy Clone</h3>
+							<span>Android</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="https://sheepcode.itch.io/jump-up" class="work" style="background-image: url(images/Captura\ de\ Tela\ \(179\).png);border-radius: 10%;">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Brading</span>
+							<h3>Jump Up</h3>
+							<span>Android</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="https://sheepcode.itch.io/lo-fi-soccer" class="work" style="background-image: url(images/Captura\ de\ Tela\ \(177\).png);border-radius: 10%;">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>Lo-Fi Soccer</h3>
+							<span>PC / MAC / Linux</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://sheepcode.itch.io/skeleton-survive" class="work" style="background-image: url(images/Captura\ de\ Tela\ \(17\).png);border-radius: 10%;">
+						<div class="desc">
+							<h3>Reaper Creeper</h3>
+							<span>PC / MAC / Linux</span>
 						</div>
 					</a>
 				</div>
 				<!-- <div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Design</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -633,8 +633,8 @@
 		</div>
 	</div> -->
 
-	<div id="map" class="fh5co-map"></div>
-	</div>
+	<!-- <div id="map" class="fh5co-map"></div>
+	</div> -->
 	
 	<!-- <div id="fh5co-footer">
 		<div class="container">
