--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>Video Game Development is a world of everyday progress and speed in the development of projects, something that all indie game dev's know very much about it. Myself included. But even though time is money, nothing can replace quality in a world where everyday we see great new games with great graphics, game mechanics and story.</p>
-					<p>Although that description makes me look like a rock, I often talk with friends everyday and love to have a coffee or two while I imagine a way of how I can evolve as a video game developer and a friend.</p>
-					<p>At the time that I am writting this(2020), I am developping my video couses on video game development with unity and video game art with Blender and Photoshop and I have discovered that the best way to learn new things in the game development world is by expalining it to someone, even if that person is yourself at a camera.</p>
+					<p>Video Game Development is a world of everyday progress and speed in the development of projects, something that all indie game dev's know very much about it. Myself included. But even though time is money, nothing can replace quality in a world where every day we see great new games with great graphics, game mechanics, and story.</p>
+					<p>Although that description makes me look like a rock, I often talk with friends every day and love to have a coffee or two while I imagine a way of how I can evolve as a video game developer and a friend.</p>
+					<p>At the time that I am writing this(2020), I am developing my video courses on video game development with unity and video game art with Blender and Photoshop and I have discovered that the best way to learn new things in the game development world is by explaining it to someone, even if that person is yourself at a camera.</p>
 				</div>
 			</div>
 		</div>
@@ -193,7 +193,7 @@
 									<span class="company">CCAA English School - 2012 - 2017</span>
 								</div>
 								<div class="timeline-body">
-									<p>I began my english studies at the of 3 where I would go to a daycare where we could only speak in english amoung my peers and teachers. After that I kept studying with small courses until I began 6th grade in school where I started attending CCAA english School.</p>
+									<p>I began my English studies at the of 3 where I would go to a daycare where we could only speak in English among my peers and teachers. After that, I kept studying with small courses until I began 6th grade in a school where I started attending CCAA English School.</p>
 								</div>
 							</div>
 						</li>
@@ -205,7 +205,7 @@
 									<span class="company">Udemy / YouTube</span>
 								</div>
 								<div class="timeline-body">
-									<p>The knowledge that online courses brought me were the extra details that formal education didn't provide, such as optmization of games and mobile aplications, where and how to publish your project and where to ask for help.</p>
+									<p>The knowledge that online courses brought me was the extra details that formal education didn't provide, such as optimization of games and mobile applications, where and how to publish your project, and where to ask for help.</p>
 									<br>
 									<p>Udemy course</p>
 									<p>Devslopes game development course for Unity</p>
@@ -222,7 +222,7 @@
 									<span class="company">Instituto Politécnico do Cávado e do Ave(IPCA) - 2020 - 2023(expected)</span>
 								</div>
 								<div class="timeline-body">
-									<p>I'm headding to Europe to study game development in Portugal for the expected time of 3 years, where I hope to learn, make connections and have great fun learning, developing and selling games.</p>
+									<p>I'm heading to Europe to study game development in Portugal for the expected time of 3 years, where I hope to learn, make connections, and have great fun learning, developing, and selling games.</p>
 								</div>
 							</div>
 						</li>
@@ -234,7 +234,7 @@
 									<span class="company">Pastor Dohms High School - 2008 - 2019</span>
 								</div>
 								<div class="timeline-body">
-									<p>Pastor Dohms is a High School that teaches it's students based on the priciple that we are different and that doesn't matter if the cat is white or black, as long as it catches mice.</p>
+									<p>Pastor Dohms is a High School that teaches its students all the best there is in becoming human, a good citizen, and a person of the world.</p>
 								</div>
 							</div>
 						</li>
@@ -562,7 +562,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Give me a call!</h2>
-					<p>I'm in most social midia platforms and apps, and my Github page is starting to take shape, so check it out.</p>
+					<p>I'm on most social media platforms and apps, and my Github page is starting to take shape, so check it out.</p>
 					<p>
 						<a href="https://wa.me/5551997990854?text=Olá%20Rubem,%20tudo%20bem?%20Encontrei%20seu%20contato%20em%20seu%20site.">
 							<img src="https://img.icons8.com/ios/64/000000/whatsapp.png"/>
