--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../../assets/profilepic2.png">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="icon" href="assets/profilepic2.png">
 </head>
 
 <body>
@@ -62,10 +62,10 @@
         </div>
     </div>
     <div class="Tecnologies d-flex justify-content-center align-items-center " style="height: 5.5vh;">
-        <img href="" src="../../assets/flutter.svg" alt="">
-        <img src="../../assets/android-logo-2.svg" alt="">
-        <img src="../../assets/unity-69.svg" alt="">
-        <img src="../../assets/visual-studio-code-1.svg" alt="">
+        <img href="" src="assets/flutter.svg" alt="">
+        <img src="assets/android-logo-2.svg" alt="">
+        <img src="assets/unity-69.svg" alt="">
+        <img src="assets/visual-studio-code-1.svg" alt="">
     </div>
 
 </body>
