--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="TextContainer d-flex justify-content-center align-items-center flex-column">
         <p class="w-75" style="font-size: 3.5vh;">
-            Hi, I'm Dev Rubs, a <a href="">Flutter</a> and <a href="">Unity</a> Developer that focuses on front-end
+            Hi, I'm Dev Rubs, a <a href="https://flutter.dev/">Flutter</a> and <a href="https://unity.com/">Unity</a> Developer that focuses on front-end
             programming.
             I usually work as a solo dev, but looking forward meeting new people in the industry and to collab with as
             many new faces and projects in my, for now, junior career.
